compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_private_type_warnings_test6.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "record X { X }"
---
----- SOURCE CODE
record X { X }

----- WARNING
warning: Unused private constructor
  ┌─ /src/warning/wrn.rakun:1:12
  │
1 │ record X { X }
  │            ^ This private constructor is never used

Hint: You can safely remove it.
