compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__warnings__unused_variable_warnings_test2.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn a() { let b = 1 5 }"
---
warning: Unused variable
  ┌─ /src/warning/wrn.rakun:1:18
  │
1 │ pub fn a() { let b = 1 5 }
  │                  ^ This variable is never used

Hint: You can ignore it with an underscore: `_b`.
